--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="img/1.png" alt="Логотип Завода Бетонов" class="logo">
+        <img src="img/IMG_0244.PNG" alt="Логотип Завода Бетонов" class="logo">
     </header>
     <h1>Система управления заказами Завода Бетонов</h1>
 
