--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="form-group">
                     <label for="size">Размер:</label>
                     <select id="size" required>
-                        <option value="" disabled selected>Выберите размер бетона</option>
+                        <option value="" disabled selected>Выберите размер бетона по ширине</option>
                         <option value="1m">1 метр</option>
                         <option value="1.20m">1.20 метра</option>
                     </select>
@@ -126,7 +126,7 @@
             <div class="order-info">
                 <strong>Имя:</strong> <span id="orderInfoName"></span>
                 <strong>Телефон:</strong> <span id="orderInfoPhone"></span>
-                <strong>Размер бетона:</strong> <span id="orderInfoSize"></span>
+                <strong>Размер бетона по ширине:</strong> <span id="orderInfoSize"></span>
                 <strong>Количество:</strong> <span id="orderInfoQuantity"></span>
                 <strong>Компания:</strong> <span id="orderInfoCompany"></span>
                 <strong>Примечание:</strong> <span id="orderInfoNote"></span>
