--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1680, initial-scale=1.0">
     <title>Система управления заказами Завода Бетонов</title>
     <link rel="stylesheet" href="main/styles.css">
     <!-- Firebase SDK версии 8 -->
@@ -72,11 +72,28 @@
                     <input type="tel" id="phone" required>
                 </div>
                 <div class="form-group">
-                    <label for="size">Размер:</label>
+                    <label for="size">Размер бетона по ширине:</label>
                     <select id="size" required>
                         <option value="" disabled selected>Выберите размер бетона по ширине</option>
                         <option value="1m">1 метр</option>
                         <option value="1.20m">1.20 метра</option>
+                    </select>
+                </div>
+                <!-- Новое поле для размера по длине -->
+                <div class="form-group">
+                    <label for="length">Размер бетона по длине:</label>
+                    <select id="length" required>
+                        <option value="" disabled selected>Выберите размер бетона по длине</option>
+                        <option value="1m">1 метр</option>
+                        <option value="2m">2 метра</option>
+                        <option value="3m">3 метра</option>
+                        <option value="4m">4 метра</option>
+                        <option value="5m">5 метров</option>
+                        <option value="6m">6 метров</option>
+                        <option value="7m">7 метров</option>
+                        <option value="8m">8 метров</option>
+                        <option value="9m">9 метров</option>
+                        <option value="10m">10 метров</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -127,6 +144,7 @@
                 <strong>Имя:</strong> <span id="orderInfoName"></span>
                 <strong>Телефон:</strong> <span id="orderInfoPhone"></span>
                 <strong>Размер бетона по ширине:</strong> <span id="orderInfoSize"></span>
+                <strong>Размер бетона по длине:</strong> <span id="orderInfoLength"></span>
                 <strong>Количество:</strong> <span id="orderInfoQuantity"></span>
                 <strong>Компания:</strong> <span id="orderInfoCompany"></span>
                 <strong>Примечание:</strong> <span id="orderInfoNote"></span>
