--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1680, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Система управления заказами Завода Бетонов</title>
     <link rel="stylesheet" href="main/styles.css">
     <!-- Firebase SDK версии 8 -->
@@ -62,76 +62,111 @@
         <div class="modal-content">
             <span class="close" onclick="closeFormModal()">&times;</span>
             <h2>Оформить заказ</h2>
+            
+            <!-- Прогресс-бар -->
+            <div class="progress-bar">
+                <div class="progress-bar-fill" id="progressBarFill" style="width: 33%;"></div>
+            </div>
+
             <form id="newOrderForm">
-                <div class="form-group">
-                    <label for="name">Имя:</label>
-                    <input type="text" id="name" required>
+                <!-- Шаг 1: Личная информация -->
+                <div class="form-step" id="step-1">
+                    <div class="form-group">
+                        <label for="name">Имя:</label>
+                        <input type="text" id="name" required title="Введите ваше полное имя">
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Телефон:</label>
+                        <input type="tel" id="phone" required title="Введите ваш номер телефона">
+                    </div>
+                    <div class="form-group">
+                        <label for="company">Компания:</label>
+                        <input type="text" id="company" required title="Введите название вашей компании">
+                    </div>
+                    <div class="form-navigation">
+                        <button type="button" class="btn-next" onclick="nextStep()">Далее</button>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="phone">Телефон:</label>
-                    <input type="tel" id="phone" required>
+
+                <!-- Шаг 2: Параметры заказа -->
+                <div class="form-step" id="step-2" style="display: none;">
+                    <div id="sizesContainer">
+                        <div class="size-entry">
+                            <div class="form-group">
+                                <label for="size">Размер бетона по ширине:</label>
+                                <select name="size" class="size-select" required>
+                                    <option value="" disabled selected>Выберите размер бетона по ширине</option>
+                                    <option value="1m">1 метр</option>
+                                    <option value="1.20m">1.20 метра</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="length">Размер бетона по длине (метры):</label>
+                                <input type="number" name="length" class="length-input" step="0.1" min="0.1" max="10" required title="Введите размер бетона по длине до 10 метров">
+                            </div>
+                            <div class="form-group">
+                                <label for="quantity">Количество:</label>
+                                <input type="number" name="quantity" class="quantity-input" min="1" required title="Введите количество бетона">
+                            </div>
+                            <button type="button" class="btn-remove" onclick="removeSizeEntry(this)">Удалить</button>
+                        </div>
+                    </div>
+                    <button type="button" class="btn-add" onclick="addSizeEntry()">Добавить размер</button>
+                    <div class="form-navigation">
+                        <button type="button" class="btn-back" onclick="previousStep()">Назад</button>
+                        <button type="button" class="btn-next" onclick="nextStep()">Далее</button>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="size">Размер бетона по ширине:</label>
-                    <select id="size" required>
-                        <option value="" disabled selected>Выберите размер бетона по ширине</option>
-                        <option value="1m">1 метр</option>
-                        <option value="1.20m">1.20 метра</option>
-                    </select>
+
+                <!-- Шаг 3: Подтверждение оплаты и примечаний -->
+                <div class="form-step" id="step-3" style="display: none;">
+                    <div class="form-group">
+                        <label for="paymentType">Тип оплаты:</label>
+                        <select id="paymentType" required title="Выберите тип оплаты" onchange="toggleBankDetails()">
+                            <option value="" disabled selected>Выберите тип оплаты</option>
+                            <option value="cash">Наличные</option>
+                            <option value="bank">Банковский перевод</option>
+                            <option value="card">Оплата картой</option>
+                        </select>
+                    </div>
+                    <div class="form-group" id="bankDetails" style="display: none;">
+                        <label for="bankAccount">Номер банковского счета:</label>
+                        <input type="text" id="bankAccount" title="Введите номер вашего банковского счета">
+                    </div>
+                    <div class="form-group">
+                        <label for="totalAmount">Итого сумма (сум):</label>
+                        <input type="number" id="totalAmount" min="0" required title="Введите общую сумму заказа">
+                    </div>
+                    <div class="form-group">
+                        <label for="depositAmount">Залог (сум):</label>
+                        <input type="number" id="depositAmount" min="0" required title="Введите сумму залога">
+                    </div>
+                    <div class="form-group">
+                        <label for="deadline">Срок выполнения:</label>
+                        <input type="date" id="deadline" required title="Выберите дату окончания заказа">
+                    </div>
+                    <div class="form-group">
+                        <label for="note">Примечание:</label>
+                        <textarea id="note" rows="3" title="Введите примечание (необязательно)"></textarea>
+                    </div>
+                    <div class="form-navigation">
+                        <button type="button" class="btn-back" onclick="previousStep()">Назад</button>
+                        <button type="submit" class="btn-submit">Отправить заказ</button>
+                    </div>
                 </div>
-                <!-- Новое поле для размера по длине -->
-                <div class="form-group">
-                    <label for="length">Размер бетона по длине:</label>
-                    <select id="length" required>
-                        <option value="" disabled selected>Выберите размер бетона по длине</option>
-                        <option value="1m">1 метр</option>
-                        <option value="2m">2 метра</option>
-                        <option value="3m">3 метра</option>
-                        <option value="4m">4 метра</option>
-                        <option value="5m">5 метров</option>
-                        <option value="6m">6 метров</option>
-                        <option value="7m">7 метров</option>
-                        <option value="8m">8 метров</option>
-                        <option value="9m">9 метров</option>
-                        <option value="10m">10 метров</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="quantity">Количество:</label>
-                    <input type="number" id="quantity" min="1" required>
-                </div>
-                <div class="form-group">
-                    <label for="company">Компания:</label>
-                    <input type="text" id="company" required>
-                </div>
-                <div class="form-group">
-                    <label for="note">Примечание:</label>
-                    <textarea id="note" rows="3"></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="deadline">Срок выполнения:</label>
-                    <input type="date" id="deadline" required>
-                </div>
-                <!-- Новые поля для оплаты -->
-                <div class="form-group">
-                    <label for="paymentType">Тип оплаты:</label>
-                    <select id="paymentType" required>
-                        <option value="" disabled selected>Выберите тип оплаты</option>
-                        <option value="cash">Наличные</option>
-                        <option value="bank">Банковский перевод</option>
-                        <option value="card">Оплата картой</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="totalAmount">Итого сумма (сум):</label>
-                    <input type="number" id="totalAmount" min="0" required>
-                </div>
-                <div class="form-group">
-                    <label for="depositAmount">Залог (сум):</label>
-                    <input type="number" id="depositAmount" min="0" required>
-                </div>
-                <button class="btn" type="submit">Отправить</button>
             </form>
+        </div>
+    </div>
+
+    <!-- Модальное окно для предварительного просмотра заказа (опционально) -->
+    <div id="previewModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closePreviewModal()">&times;</span>
+            <h2>Предварительный просмотр заказа</h2>
+            <div id="orderPreview"></div>
+            <div class="form-navigation">
+                <button type="button" class="btn-close" onclick="closePreviewModal()">Закрыть</button>
+            </div>
         </div>
     </div>
 
@@ -143,17 +178,17 @@
             <div class="order-info">
                 <strong>Имя:</strong> <span id="orderInfoName"></span>
                 <strong>Телефон:</strong> <span id="orderInfoPhone"></span>
+                <strong>Компания:</strong> <span id="orderInfoCompany"></span>
                 <strong>Размер бетона по ширине:</strong> <span id="orderInfoSize"></span>
                 <strong>Размер бетона по длине:</strong> <span id="orderInfoLength"></span>
                 <strong>Количество:</strong> <span id="orderInfoQuantity"></span>
-                <strong>Компания:</strong> <span id="orderInfoCompany"></span>
-                <strong>Примечание:</strong> <span id="orderInfoNote"></span>
-                <strong>Срок выполнения:</strong> <span id="orderInfoDeadline"></span>
-                <!-- Информация об оплате -->
                 <strong>Тип оплаты:</strong> <span id="orderInfoPaymentType"></span>
+                <strong>Номер банковского счета:</strong> <span id="orderInfoBankAccount"></span>
                 <strong>Итого сумма:</strong> <span id="orderInfoTotalAmount"></span> сум
                 <strong>Залог:</strong> <span id="orderInfoDepositAmount"></span> сум (<span id="orderInfoDepositPercentage"></span>%)
                 <strong>Задолжено:</strong> <span id="orderInfoOutstandingAmount" class="outstanding"></span> сум
+                <strong>Примечание:</strong> <span id="orderInfoNote"></span>
+                <strong>Срок выполнения:</strong> <span id="orderInfoDeadline"></span>
             </div>
         </div>
     </div>
