--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <img src="img/IMG_0244.PNG" alt="Логотип Завода Бетонов" class="logo">
     </header>
-    <h1>Система управления заказами Завода Бетонов</h1>
+    <h1>Система управления заказами</h1>
 
     <div class="search-filter">
         <div class="search-bar">
