--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <input type="tel" id="phone" required>
                     </div>
                     <div class="form-group">
-                        <label for="company">Компания:</label>
+                        <label for="company">Фамилия:</label>
                         <input type="text" id="company" required>
                     </div>
                     <div class="form-navigation">
@@ -178,7 +178,7 @@
             <div class="order-info">
                 <strong>Имя:</strong> <span id="orderInfoName"></span>
                 <strong>Телефон:</strong> <span id="orderInfoPhone"></span>
-                <strong>Компания:</strong> <span id="orderInfoCompany"></span>
+                <strong>Фамилия:</strong> <span id="orderInfoCompany"></span>
                 <strong>Размер бетона по ширине:</strong> <span id="orderInfoSize"></span>
                 <strong>Размер бетона по длине:</strong> <span id="orderInfoLength"></span>
                 <strong>Количество:</strong> <span id="orderInfoQuantity"></span>
