--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <body>
     <header>
         <img src="img/IMG_0244.PNG" alt="Логотип Завода Бетонов" class="logo">
+        <!-- Навигационная панель -->
+        <nav>
+            <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="warehouse.html">Склад</a></li>
+            </ul>
+        </nav>
     </header>
     <h1>Система управления заказами</h1>
 
@@ -57,6 +64,7 @@
 
     <button class="btn" onclick="openOrderForm()">Оформить заказ</button>
 
+    <!-- Модальные окна -->
     <!-- Модальное окно оформления заказа -->
     <div id="formModal" class="modal">
         <div class="modal-content">
