--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="warehouse.html">Склад</a></li>
+                <li><a href="warehouse.html"></a></li>
             </ul>
         </nav>
     </header>
